assets/stylesheets/mobile/chat-message.scss
.chat-message-selected {
  .chat-msgactions-hover {
    bottom: 0;
    transition: top 1s linear;
  }
}

.chat-message *,
.chat-composer-row,
.chat-reply,
.replying-text {
  @include unselectable;
}

.chat-msgactions-backdrop {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  z-index: z("header") + 1;
  transition: background-color 0.2s ease;

  .collapse-area {
    width: 100%;
    height: 100%;
  }

  &.fade-in {
    background-color: rgba(0, 0, 0, 0.35);

    .chat-msgactions {
      bottom: 0;
    }
  }

  .chat-msgactions {
    position: absolute;
    bottom: -100vh;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    border-radius: 8px 8px 0 0;
    margin: 0 2px;
    transition: bottom 0.2s ease;

    .selected-message-container {
      padding: 0.5em 0.5em 1em 0.5em;
    }

    .selected-message {
      display: flex;
      align-items: center;
      padding: 0.5em;
      border: 1px solid var(--primary-low);
      box-shadow: 0 0 4px rgba(0, 0, 0, 0.125);
      border-radius: 8px;

      .selected-message-reply {
        &:not(.is-expanded) {
          @include ellipsis;
        }

        &.is-expanded {
          @include user-select(text);
          max-height: 80px;
          overflow-y: scroll;
        }
      }
    }

    .main-actions {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 1em 1em 1.5em 1em;

      .chat-message-reaction {
        background: none;
        border: 1px solid transparent;

        img.emoji {
          width: 30px;
          height: 30px;
          object-fit: contain;
        }

        &.reacted {
          border-color: var(--tertiary-medium);
          background: var(--tertiary-very-low);
          color: var(--tertiary-hover);

          &:hover {
            background: var(--tertiary-low);
          }
        }
      }

      .react-btn {
        .d-icon {
          color: var(--primary-medium);
          font-size: var(--font-up-4);
        }

        border: 1px solid var(--primary-low);
      }

      .chat-message-reaction,
      .react-btn {
        margin: 0;
      }

      .chat-message-reaction,
      .reply-btn,
      .react-btn {
        border-radius: 3px;
        width: calc(100% / 4 - 1.5em);
        height: 42px;
      }

      .reply-btn {
        .d-icon {
          color: var(--secondary);
        }
      }
    }

    .secondary-actions {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
      padding: 0.5em;
      margin: 0;

      .chat-message-action-item {
        border-bottom: 1px solid var(--primary-low);
        width: 100%;
        list-style: none;
        padding-bottom: 0.25em;
        margin-bottom: 0.25em;
        display: flex;

        &:last-child {
          border: 0;
          margin: 0;
          padding: 0;
        }

        .chat-message-action {
          justify-content: flex-start;
          background: none;
          width: 100%;
          border: 0;
        }
      }
    }
  }
}

